Ajout des fichiers pour référencement sur Google

--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="logo-with%20color.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Dispoz - Générateur de palettes de couleurs. Extrayez des palettes de couleurs à partir de n'importe quelle image et personnalisez votre carte de couleurs." />
+    <meta name="keywords" content="générateur de palette, palette de couleurs, extraction de couleurs, outil design, couleurs, design, web design" />
+    <meta name="author" content="Dispoz" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Dispoz - Générateur de palettes de couleurs" />
+    <meta property="og:description" content="Extrayez des palettes de couleurs à partir de n'importe quelle image et personnalisez votre carte de couleurs." />
+    <meta property="og:url" content="https://wendlac.github.io/dispoz/" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <link rel="canonical" href="https://wendlac.github.io/dispoz/" />
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
+    <link rel="icon" type="image/png" href="/logo-with%20color.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
-    <title>Dispoz - Générateur de palettes</title>
+    <title>Dispoz - Générateur de palettes de couleurs | Outil d'extraction de couleurs</title>
   </head>
   <body>
     <div id="root"></div>
