--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
     <title>Dispoz - Générateur de palettes de couleurs | Outil d'extraction de couleurs</title>
+    <meta name="google-site-verification" content="x_g7siw4nG5OagZNrNgJnXDjccR4IuTUGNKc2Z_ML_s" />
   </head>
   <body>
     <div id="root"></div>
